--- a/index.html
+++ b/index.html
@@ -15,7 +15,16 @@
     <iframe src="https://trinket.io/embed/python/ad4cd3996b" width="75%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
     <br>
     <textarea id="submission" rows="15" cols="50">Enter Submission here</textarea>
-    <button onclick="evaluate(submission)">Check my Answer</button>
+    <script> function evaluate(option, solution)
+    {
+
+        if (option == "strings")
+            {
+                solution == 
+            }
+    (</script>
+    <button onclick="evaluate(document.getElementById(option), document.getElementById(submission))">Check my Answer</button>
+    <
 </body>
 
 
