--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<?php
-echo "<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <title>Modern Coding Assignments</title>
@@ -26,5 +25,4 @@ echo "<!DOCTYPE html>
     <button onclick='evaluate(document.getElementById(option), document.getElementById(submission))'>Check my Answer</button>
     <
 </body>
-</html>";
-?>
+</html>
