--- a/index.html
+++ b/index.html
@@ -1,28 +1,15 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <title>Modern Coding Assignments</title>
-</head>
-<body>
-    <h1>Welcome to Modern Coding!</h1>
-    <label for='assignments'> Choose an assignment:</label>
-    <select id='assignment'> 
-        <option value='None'>None</option>
-        <option value='strings'>Strings</option>
-    </select>
-    <br>
-    <h2>Run your solution:</h2>
-    <iframe src='https://trinket.io/embed/python/ad4cd3996b' width='75%' height='356' frameborder='0' marginwidth='0' marginheight='0' allowfullscreen></iframe>
-    <br>
-    <textarea id='submission' rows='15' cols='50'>Enter Submission here</textarea>
-    <script> function evaluate(option, solution)
-    {
-        if (option == 'strings')
-            {
+<html lang="en">
 
-            }
-    (</script>
-    <button onclick='evaluate(document.getElementById(option), document.getElementById(submission))'>Check my Answer</button>
-    <
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Modern Coding evaluator</title>
+</head>
+
+<body>
+    <h1>Evaluator</h1>
 </body>
+
 </html>
