--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
             {
 
             }
-    (</script>
-    <button onclick='evaluate(document.getElementById(option), document.getElementById(submission))'>Check my Answer</button>
-    <
+    </script>
+    <button onclick="evaluate(document.getElementById(option), document.getElementById(submission))">Check my Answer</button>
 </body>
 </html>
